--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box lungs" style="padding-bottom:50px !important; padding-top: 10px !important;">
-                    <img src="logo.png" alt="" style="height: 360px !important; width: 360px;">
+                    <img src="" alt="" style="height: 360px !important; width: 360px;">
                   </div>
                 </div>
               </div>
