--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="img-box lungs" style="padding-bottom:50px !important; padding-top: 10px !important;">
-                    <img src="" alt="" style="height: 360px !important; width: 360px;">
+                  <div class="img-box " style="padding-bottom:50px !important; padding-top: 10px !important;">
+                    
                   </div>
                 </div>
               </div>
