--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  
 </head>
 
 <body>
@@ -97,7 +98,7 @@
                       <a href="#contactLink" class="btn-1">
                         Contact Us
                       </a>
-                      <a href="" class="btn-2">
+                      <a href="https://enter-opy.github.io/predictor-UI/" class="btn-2" id="upload" >
                         Upload X-ray
                       </a>
                     </div>
