--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                       <a href="#contactLink" class="btn-1">
                         Contact Us
                       </a>
-                      <a href="https://enter-opy.github.io/predictor-UI/" class="btn-2" id="upload" >
-                        Upload X-ray
+                      <a href="https://enter-opy.github.io/lung-disease-detection/" class="btn-2" id="upload" >
+                        Begin
                       </a>
                     </div>
                   </div>
